feat(auth-service): robust stateless JWT implementation and security audit fixes