@@ -2,6 +2,7 @@ package com.example.authservice.services;
 
 import com.example.authservice.repositories.UserRepository;
 import lombok.AllArgsConstructor;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -9,6 +10,7 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
+import java.util.List;
 
 @Service
 @AllArgsConstructor
@@ -24,7 +26,7 @@ public class UserService implements UserDetailsService {
         return new User(
                user.getEmail(),
                user.getPassword(),
-               Collections.emptyList()
+               List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()))
         );
     }
 }
